Fixed height issue with Auto-Resize text areas when loaded while pane is collapsed.
Now the pane always has the same width
unless the screen is resized to be very small.

--- a/ui/src/components/PipelineEditor/Editor.css
+++ b/ui/src/components/PipelineEditor/Editor.css
@@ -230,20 +230,20 @@ aside.stepChooser .description {
   color: black;
 
   overflow-x: visible;
-  width: 30%;
-  max-width: 400px;
 
   position: absolute;
+  left: max(2em, calc(100% - 400px));
   top: 3em;
   right: 0px;
   bottom: 190px;
 
   z-index: 1500;
-  transition: width 0.5s;
+  transition: left 0.5s, right 0.5s;
 }
 
 .paneCollapsed.ioList {
-  width: 0px !important;
+  left: 100% !important;
+  right: max(-400px, calc(2em - 100%));
 }
 
 .ioListInner {
